finalproject/styles/base.css
/*
Author: Esteban Rubén Mangas Calva
4/08/2026
Base style for the final project; web site for Sara Mangas Creaciones (SMC)
*/

/*pseudo-element root that defines and contains the color schema and typography
(and other standard styles that repeat in the page) for SMC web site*/
:root {
    --SMC-first-color: rgb(250, 176, 214);
    --SMC-first-transparency: rgba(250, 176, 214, 0.8);
    --SMC-second-color: rgb(128, 208, 205);
    --SMC-second-transparency: rgba(128, 208, 205, 0.6);
    --SMC-contrast-color: rgb(255, 255, 255);
    --SMC-headings-font: 'Comic Relief';
    --SMC-text-font: 'Delius';
    --SMC-backup-font: sans-serif;
    --some-border: 3px solid gray;
    --link-text-color: rgb(0, 0, 0);
}

/*Universal selector; defines basic styling for the whole web site.
Defining the typography of all the header elements and style*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: var(--SMC-text-font), var(--SMC-backup-font);
}

h1 {
    font-family: var(--SMC-headings-font);
    padding: 0.5rem;
}

h2,
h3,
h4,
h5,
h6 {
    font-family: var(--SMC-headings-font);
    padding: 0.5rem 0.3rem;
    background-color: var(--SMC-first-color);
    text-align: center;
}

/*Styling header*/
header {
    display: grid;
    grid-template-columns: 100px auto auto 44px;
    grid-template-rows: auto auto;
    column-gap: 1rem;
    padding: 5px 0 5px 10px;
    background-color: var(--SMC-first-color);
    align-items: end;
}

header img {
    display: block;
    width: 100%;
    height: auto;
    /*padding-bottom: 10px;*/
    border-radius: 48px;
}

header span {
    font-size: 1.2rem;
    align-self: center;
    font-weight: bold;
}

/*Styling ham menu button*/
.hamburger {
    background: none;
    border: none;
    cursor: pointer;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    grid-column: 4 / 5;
    align-self: center;
}

.hamburger::after {
    content: "\2630";
    font-size: 2.39rem;
}

.hamburger.show::after {
    content: "\00D7";
}

/*Styling navigation bar*/
.navigation {
    display: none;
}

.navigation li {
    padding: 0;
}

.navigation.show {
    display: block;
    margin: 1rem auto auto auto;
    grid-row: 2 / 3;
}

.navigation ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    list-style-type: none;
}

.navigation a {
    display: block;
    text-decoration: none;
    color: var(--link-text-color);
    border-bottom: var(--some-border);
    padding: 0.8rem 0;
}

.navigation a:hover {
    background-color: var(--SMC-contrast-color);
}

.navigation ul li.current {
    background-color: var(--SMC-second-color);
    border-top: var(--some-border);
    border-left: var(--some-border);
    border-right: var(--some-border);
}

/*Styling for the siteplan*/
ul {
    list-style: none;
}

p,
li {
    padding: 1rem;
}

div {
    background-color: var(--SMC-second-color);
    margin: 1.9rem 0;
    border: var(--some-border);
}

section {
    background-color: var(--SMC-second-color);
}

#site-plan {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto 1fr;
}

#site-plan span {
    font-weight: bold;
}

#site-plan h2 {
    grid-column: 1 / 3;
}

#site-plan p {
    grid-column: 1 / 3;
}

#site-plan img{
    display: block;
    margin: auto;
    padding: 1rem;
}

#first,
#second,
#contrast {
    border: var(--some-border);
    margin: 0.5rem;
}

#first {
    background-color: var(--SMC-first-color);
}

#second {
    background-color: var(--SMC-second-color);
}

#contrast {
    background-color: var(--SMC-contrast-color);
}

#wireframe img {
    display: block;
    max-width: 95%;
    margin: auto;
    padding: 1rem;
}

#wireframe a {
    display: block;
}

/*Styling hero img and div in the homepage*/
.hero,
#welcome {
    margin: 0;
    border: none;
}

.hero img {
    width: 100%;
    height: auto;
}

#welcome {
    position: absolute;
    top: 260px;
    max-width: 1200px;
    height: fit-content;
    color: var(--link-text-color);
    font-size: larger;
    font-weight: bolder;
    background-color: var(--SMC-second-transparency);
}

.call-to-action {
    margin: 0 1.5rem;
    padding: 0.7rem;
    position: sticky;
    bottom: 30px;
    border: var(--some-border);
}

/*call to action and link buttons style*/
.linkbutton,
.call-to-action {
    text-decoration: none;
    color: var(--link-text-color);
    background-color: var(--SMC-contrast-color);
    border-radius: 100px;
}

.linkbutton:hover,
.call-to-action:hover {
    background-color: var(--SMC-first-color);
    font-weight: bold;
}

/*Styling homepage*/
.news {
    display: grid;
    grid-template-areas:
    "title title"
    "image text"
    "image text";
}

.news h3 {
    grid-area: title;
}

.news img {
    display: block;
    grid-area: image;
}

.news p {
    grid-area: text;
    align-self: center;
}

/*Styling form*/
#join-grid {
    background-color: var(--SMC-contrast-color);
    border: none;
}

form {
    margin: 1rem 2%;
    margin-top: 0;
}

form h2 {
    font-size: 1.2rem;
    margin: 0 0 .2rem 0;
    border-bottom: var(--some-border);
}

label {
    display: block;
    font-size: .9rem;
    padding-top: .2rem;
}

input[type=text],
input[type=tel],
input[type=date],
input[type=email],
select {
    display: block;
    margin: .1rem 0 1rem 0;
    padding: .3rem;
    border: 1px solid rgba(153, 153, 153);
    border-radius: 4px;
    border-left-width: 5px;
    border-left-color: rgba(85, 85, 85);
    font-size: 1rem;
    color: #3D405B;
    width: 250px;
}

input:required {
    border-left-color: rgba(215, 0, 0);
}

input:focus,
select:focus {
    border-left-color: rgb(0, 0, 0);
    outline: none;
}

input:required:valid {
    border-left-color: rgb(0, 128, 0);
}

input[type=submit] {
    border: none;
    text-align: center;
    font-weight: bold;
    background-color: var(--SMC-second-color);
    border-radius: 1rem;
    padding: .75rem 1.5rem;
    margin: 2rem 0;
    font-size: 1.2rem;
    -webkit-appearance: none;
    appearance: none;
}

input[type=submit]:focus,
input[type=submit]:hover {
    background-color: var(--SMC-first-color);
    outline: 2px solid rgba(0, 0, 0);
}

input:-webkit-autofill {
    -webkit-text-fill-color: #3D405B;
}

#subscriptionInfo {
    background-color: rgba(244, 241, 222);
        padding: 0 1rem;
        border: var(--some-border);
        border-radius: 10px;
        margin: 1rem;
        max-width: 95%;
}

#subscriptionInfo p {
    padding: 0.7rem 0;
}

#aboutnews {
    background-color: transparent;
}

.customer p {
    text-align: center;
    font-weight: bold;
}

.modal-button {
    display: block;
    margin: 1rem auto;
    padding: 0.5rem;
    background-color: var(--SMC-contrast-color);
    border-radius: 1rem;
    border: var(--some-border);
    width: fit-content;
    appearance: none;

}

.modal-button:hover {
    background-color: var(--SMC-first-color);
    font-weight: bolder;
}

dialog {
    max-width: 75%;
    width: 900px;
    background-color: var(--SMC-second-color);
    border: var(--some-border);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    padding: 20px;
    margin: auto;
}

::backdrop {
    background-color: rgba(0, 0, 0, 0.5);
}

dialog button {
    position: absolute;
    right: 12px;
    top: 14px;
    background-color: var(--SMC-contrast-color);
    border: var(--some-border);
    padding: 0.75rem 0.826rem;
}

dialog p {
    text-align: center;
    font-weight: bolder;
    margin: 1rem;
}

/*Styling card display of products in the catalogue and span with message
with date stored in local storage*/
#localS {
    margin-left: 0.8rem;
    background-color: var(--SMC-first-transparency);
    border-radius: 10px 0;
    border: var(--some-border);
    padding: 0.5rem;
}

.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    text-align: center;
    padding: 5px;
    background-color: transparent;
    border: none;
}

.cards section {
    margin: auto;
    height: 97%;
    width: 95%;
    padding: 1rem;
    background-color: var(--SMC-second-transparency);
    border: var(--some-border);
    border-radius: 10px;
}

.cards section p {
    font-weight: bold;
}

.cards section img {
    display: block;
    max-width: 100%;
    height: auto;
}

/*Styling footer*/
footer div {
    margin: 0;
    border: none;
}

footer {
    padding: 1rem 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: var(--SMC-second-color);
}

.social {
    display: flex;
    justify-content: center;
    column-gap: 10%;
    height: fit-content;
    margin: 0.5rem;
}

.social a {
    display: flex;
    width: 45.5px;
    height: 45.5px;
    border-radius: 10px;
    justify-content: center;
    background-color: var(--SMC-contrast-color);
}

.social a:hover {
    border:var(--some-border) ;
}

.social img {
    width: auto;
    height: 30px;
    display: block;
    align-self: center;
}

footer .foot-title {
    display: block;
    font-weight: bolder;
}

footer p,
footer .foot-title {
    text-align: left;
    padding: 0 1rem;
}

footer div {
    padding-bottom: 10px;
}

footer a {
    color: var(--link-text-color);
}

